most of the contact page basics are done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,3 +115,13 @@ footer {
     margin-right: 25px;
 }
 
+/* Contact Page */
+
+input[type=submit] {
+    padding: 5px 30px;
+    color: #fff;
+    cursor: pointer;
+    background: #4aaaab;
+    border: 0 none;
+}
+
