updated some comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     max-width: 960px;
 }
 
-/* NEED TO SPACE OUT THE NAV ITEMS (ADD MEDIA QUERIES TO REDUCE SPACING ON SMALLER SCREENS? */
+/* NEED TO SPACE OUT THE NAV ITEMS (ONCE ADDED, DO I NEED MEDIA QUERIES TO REDUCE SPACING ON SMALLER SCREENS? */
 nav a {
     color: #999;
     line-height: 18px;
